Clean up from Checkstyle; added tools dir for FindBugs and Checkstyle